# health-product-analysis

./: .gitignore  02-product-challenge.md  04-architecture.md  05-architecture-challenge.md  06-final-architecture.md  07-implementation-plan.md  CLAUDE.md  _config.yml  agent-team-framework.md  dev-process.md  engineering-backlog.md  index.md  mvp-experience.md  spike-data-integration.md
health-concierge/: .env.example  .gitignore  README.md  SETUP.md  config.py  pyproject.toml
health-concierge/scripts/: backup_db.py  check_nudges.py  crontab.example  crontab.txt  daily_summary.py  deploy.sh  error_alert.py  evening_checkin.py  health-concierge.service  install_cron.sh  morning_checkin.py  reset_daily.py  restart_bot.sh  setup_db.py  sync_all.py  sync_garmin.py  sync_oura.py  sync_renpho.py  sync_strava.py  weekly_reflection.py
health-concierge/src/: __init__.py  bot.py  brain.py  db.py  engagement.py  governor.py  llm.py  meals.py  nudges.py  nutrition.py  onboarding.py  proactive.py  safety.py  summarizer.py
health-concierge/tests/: conftest.py  test_bot.py  test_brain.py  test_db.py  test_engagement.py  test_garmin_sync.py  test_governor.py  test_llm.py  test_llm_vision.py  test_meals.py  test_nudges.py  test_nutrition.py  test_nutrition_aggregation.py  test_nutrition_bot.py  test_nutrition_command.py  test_nutrition_correction.py  test_nutrition_db.py  test_nutrition_proactive.py  test_nutrition_recs.py  test_onboarding.py  test_oura_sync.py  test_persona.py  test_proactive.py  test_renpho_sync.py  test_safety.py  test_strava_sync.py  test_summarizer.py  (+3 more)
(+24 files in other folders)
